# gamejam01

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
assets/shaders/: basic.fs  basic.vs  light.fs
engine/: CMakeLists.txt
engine/include/hangout_engine/platform/: game.h  window.h
engine/include/hangout_engine/rendering/: buffer.h  camera.h  render_command.h  renderer.h  renderer_api.h  shader.h  texture.h  types.h  vertex_array.h
engine/src/platform/: game.cpp  sdl_window.cpp  sdl_window.h
engine/src/rendering/: camera.cpp  open_gl_renderer.cpp  open_gl_renderer.h  texture.cpp
engine/src/rendering/opengl/: open_gl_buffer.cpp  open_gl_buffer.h  open_gl_graphics.h  open_gl_renderer.cpp  open_gl_renderer.h  open_gl_renderer_api.cpp  open_gl_renderer_api.h  open_gl_shader.cpp  open_gl_shader.h  open_gl_texture.cpp  open_gl_texture.h  open_gl_types.h  open_gl_vertex_array.cpp  open_gl_vertex_array.h
s/: build_web.py  get_dependencies.py
src/: game_object.cpp  game_object.h  main.cpp
